--- a/main.yml
+++ b/main.yml
@@ -5,6 +5,6 @@
   tasks:
     - name : terraform test
       command: terraform init
-  tasks:
-    - name : terraform test
-      command: terraform plan
+  #tasks:
+   # - name : terraform test
+    #  command: terraform plan
